@@ -1,3 +1,6 @@
+2020-08-23
+	* string conversion class specifier for kprintf (kmw)
+
 2020-08-22
 	* added krealloc (kmw)
 	* record PCI device info when scanning bus (kmw)
